# alphalib

./: .gitignore  00_data-cleansing.ipynb  00_dataset.ipynb  01_dataset.ipynb  01_selection.ipynb  01a_databaset.ipynb  01a_dataset.ipynb  02_analysis.ipynb  02_fa_analysis.ipynb  02_fundamental.ipynb  02_options.ipynb  03_analysis.ipynb  03a_analysis.ipynb  04_yield-analysis.ipynb  04_yield_analysis.ipynb  05_interactive_analysis.ipynb  05_recommender.ipynb  06_libraries.ipynb  06_lotto.ipynb  07_selection.ipynb  0_💰_Stock_Tracker.py  0_💰_Tracker.py  100_feature-eng.ipynb  100_lotto.ipynb  100_portfolio.ipynb  101_time-series.ipynb  106_prediction.ipynb  107_prediction.ipynb  200_prompt-eng.ipynb  ChatGPT.md  FINANCIAL_INFO.md  PROMPT_ENG.md  README.md  alphalib.ipynb  alphalib_dividends_united_states.xlsx  alphalib_dividends_united_states_1.xlsx  alphalib_financials_united_states.xlsx  alphalib_stats_united_states.xlsx  alphalib_united_states.xlsx  cli.py  (+9 more)
alphalib/: __init__.py  alphalib.db  alphalib.xlsx
alphalib/analysis/: __init__.py  balance_sheet.py  dividend.py  dividend_yield.py  high_yield.py  intrinsic_value.py  pairs.py  piotroski.py  recommender.py  sentiment.py  strategy.py  technical.py  trends_analysis.py  turtle.py  yield_analysis.py
alphalib/app/: 0_💰_Tracker.py
alphalib/backtest/: yield_strategy.py
alphalib/blockchain/: __init__.py
alphalib/core/: basics.py
alphalib/data_sources/: __init__.py  investing.py  investpy.py  nasdaq.py  seeking_alpha.py  yahoo_finance.py  yahoo_finance_watchlist.py  yahoo_query.py  yfinance.py
alphalib/dataset/: __init__.py  (+3 more)
app/: 0_💰_Tracker.py  requirements.txt
data/: EARN.xlsx  ECC.xlsx  OXLC.xlsx  abbv_historical_prices.xlsx  alphalib_financials_united_states.xlsx  alphalib_united_states_2.xlsx  alphalib_united_states_4.xlsx  alphalib_united_states_6.xlsx  binance_btcusdt_day.csv  dividend_aristocrats.xlsx  features.xlsx  googl_historical_prices.xlsx  invest.txt  leg_historical_prices.xlsx  monthly_dividend.xlsx  portfolio.xlsx  stock.xlsx  stock_all.xlsx  stock_dividends.xlsx  stocks.csv  stocks.xlsx  test_set.csv  time_series_data.csv
old/: 00_data-cleansing.ipynb  03_analysis.ipynb  05_recommender.ipynb  200_prompt-eng.ipynb  FINANCIAL_INFO.md  LIBRARIES.md  LICENSE  balance_sheet.py  markowitz.py  pairs.py  pyproject.toml  trends.py
pages/: 1_📈_Analysis.py  1_📈_Dividend_Analysis.py  1_📈_Stock_Analysis.py  2_ΦΦ_Balance_Sheet.py  2__Balance_Sheet.py  2_📈_Selection.py  2_📈_Stock_Selection.py  2_🗹🗹_Stock_Selection.py
tests/: test_alphalib.py  test_analysis.py  test_balance_sheet.py  test_data_sources.py  test_dataset.py  test_dateutils.py  test_dividend_analysis.py  test_finance_database.py  test_fundamental.py  test_recommender.py  test_stock_analysis.py  test_strategy.py  test_yahooquery_downloader.py  test_yfinance_downloader.py
(+49 files in other folders)
