[tool.poetry]
name = "alphalib"
version = "0.1.0"
description = "A financial investment terminal and library"
authors = ["alpha2phi <alpha2phi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.4.1"
investpy = "^1.0.8"
yfinance = "^0.1.70"
backtrader = "^1.9.76"
pydantic = "^1.9.1"
openpyxl = "^3.0.10"
pandas-datareader = "^0.10.0"
fire = "^0.4.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.11.1"
financedatabase = "^1.0.2"
fundamentalanalysis = "^0.2.14"
lxml = "^4.9.1"
requests = "^2.28.1"
prompt-toolkit = "^3.0.31"
cssselect = "^1.1.0"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"
pytrends = "^4.8.0"
nltk = "^3.7"
python-dateutil = "^2.8.2"
plotly = "^5.10.0"
cufflinks = "^0.17.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
