[tool.poetry]
name = "alphalib"
version = "0.1.0"
description = "A financial investment terminal and library"
authors = ["alpha2phi <alpha2phi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "*"
investpy = "*"
backtrader = "*"
pydantic = "*"
openpyxl = "*"
pandas-datareader = "*"
fire = "*"
html5lib = "*"
beautifulsoup4 = "*"
financedatabase = "*"
fundamentalanalysis = "*"
lxml = "*"
requests = "*"
prompt-toolkit = "*"
cssselect = "*"
selenium = "*"
webdriver-manager = "*"
pytrends = "*"
nltk = "*"
python-dateutil = "*"
plotly = "*"
cufflinks = "*"
matplotlib = "*"
requests-html = "*"
httpx = "*"
yfinance = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
