[tool.poetry]
name = "alphalib"
version = "0.1.0"
description = "An investment analysis library."
authors = ["alpha2phi <alpha2phi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
beautifulsoup4 = "^4.11.2"
cssselect = "^1.2.0"
cufflinks = "^0.17.3"
ffn = "^0.3.6"
financedatabase = "^2.0.9"
fire = "^0.5.0"
fundamentalanalysis = "^0.2.14"
html5lib = "^1.1"
httpx = "^0.23.3"
hydra-core = "^1.3.2"
investpy = "^1.0.8"
lux = "^0.5.1"
lxml = "^4.9.2"
matplotlib = "^3.7.1"
mplfinance = "^0.12.9-beta.7"
nltk = "^3.8.1"
openpyxl = "^3.1.2"
pandas = "^1.5.3"
pandas-datareader = "^0.10.0"
plotly = "^5.13.1"
prompt-toolkit = "^3.0.38"
pydantic = "^1.10.6"
python-dateutil = "^2.8.2"
pytrends = "^4.9.0"
requests = "^2.28.2"
requests-html = "^0.10.0"
rich = "^13.3.2"
scipy = "^1.10.1"
selenium = "^4.8.2"
selectolax = "^0.3.12"
webdriver-manager = "^3.8.5"
yahooquery = "^2.3.0"
yfinance = "^0.2.12"
alpha-vantage = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
